# MicroEngineProject

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
Assets/Shaders/: fragment.glsl  vertex.glsl
Assets/Shaders/temp/: fragment.glsl  vertex.glsl
Assets/properties/: config.properties  messages_en.properties  sys_graphics_en.properties
Google_tests/: CMakeLists.txt  MessageBoardTest.cpp  SafeConversionTest.cpp
SDL2/include/SDL2/: SDL_events.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_mouse.h  SDL_render.h  SDL_shape.h  SDL_video.h
default_libs/MessageBoard/: CMakeLists.txt
default_libs/MessageBoard/InternalLogger/: InternalLogger.h
default_libs/Model/: CMakeLists.txt
default_libs/Model/Mesh/: Mesh.cpp  Mesh.h
default_libs/Model/Model/: Model.cpp  Model.h
default_libs/PluginManager/: CMakeLists.txt
default_libs/PluginManager/PluginManager/: PluginInterface.h  PluginManager.cpp
default_libs/Shader/: CMakeLists.txt
default_libs/Shader/Shaders/: Shader.h
default_plugins/SplineGen3D/: CMakeLists.txt
default_plugins/SplineGen3D/SplineGen3D/: SplineGenerator3D.cpp  SplineGenerator3D.h
lib/assimp/lib/pkgconfig/: assimp.pc
lib/glew/lib/cmake/glew/: glew-targets.cmake
lib/glew/lib/pkgconfig/: glew.pc
lib/glfw/lib/cmake/glfw3/: glfw3Targets-noconfig.cmake
lib/glfw/lib/pkgconfig/: glfw3.pc
lib/spdlog/lib/cmake/spdlog/: spdlogConfigTargets-release.cmake  spdlogConfigTargets.cmake
lib/spdlog/lib/pkgconfig/: spdlog.pc
libs/Assimp/include/assimp/: material.h  texture.h
libs/Assimp/lib/cmake/assimp-5.3/: assimpTargets.cmake
libs/SDL2/include/SDL2/: SDL_gamecontroller.h  SDL_haptic.h
spdlog/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  spdlog.pc  spdlogConfigTargets.cmake
spdlog/.cmake/api/v1/reply/: cache-v2-4dc6ab13595e2827f613.json  cmakeFiles-v1-cf630d702f5c66ded86a.json  codemodel-v2-41d99f714c125dec3463.json  directory-.-Debug-883955b8a3dcf36d0631.json  index-2023-01-30T14-28-18-0523.json  target-example-Debug-01b39f132f8d92707b79.json  target-spdlog-Debug-c0d41b17e48c57a39881.json  toolchains-v1-01d2f25748a769fea853.json
spdlog/example/: cmake_install.cmake
src/: main.cpp  main_testbed.cpp
src/Engine/Graphics/: GE.cpp  GE.h  UniformVarManager.cpp  UniformVarManager.h
src/Engine/Graphics/components/EBO/: EBO.cpp  EBO.h
src/Engine/Graphics/components/FBO/: FBO.cpp  FBO.h
src/Engine/Graphics/components/Model/: Mesh.h  MeshPrerequesite.h  Model.cpp  Model.h
src/Engine/Graphics/components/RBO/: RBO.cpp  RBO.h
src/Engine/Graphics/components/Texture/: Texture.cpp
src/Engine/Graphics/components/VBO/: VBO.h
src/Engine/Graphics/modules/: GUIBaseClass.h
src/Engine/NodeSystem/Nodes/: Node_Mesh.cpp  Node_Mesh.h  Node_Model3D.h  Node_Object.cpp  Node_Object.h
src/Engine/misc/: InternalLogger.h
src/Game/: GameConfiguration.cpp  GameConfiguration.h  GameMisc.h  GameNode.cpp  GameNode.h  GameObject.cpp  GameObject.h  GameSprite.cpp  GameSprite.h  InternalLogger.cpp  InternalLogger.h  NodeSystem.cpp  NodeSystem.h
src/Game/Graphics/: GE.cpp  GE.h  GE_close.cpp  GE_init.cpp  GE_rend.cpp  Shader.cpp  Shader.h  TextureManager.h  UniformVarManager.cpp  UniformVarManager.h
src/Game/Graphics/EBO/: EBO.h
src/Game/Graphics/Model/: Mesh.cpp  Mesh.h  MeshPrerequesite.h  Model.cpp  Model.h
src/Game/Graphics/Shaders/: Shader.cpp  Shader.h
src/Game/Graphics/VAO/: VAO.cpp  VAO.h
src/Game/Graphics/VBO/: VBO.cpp
src/Game/Graphics/components/FBO/: FBO.cpp  FBO.h
src/Game/Graphics/components/Model/: Mesh.cpp  Mesh.h  MeshPrerequesite.h  Model.cpp  Model.h
src/Game/Graphics/components/RBO/: RBO.cpp  RBO.h
src/Game/Graphics/components/Shaders/: Shader.cpp  Shader.h
src/Game/Graphics/components/Texture/: Texture.h
src/Game/Graphics/components/VAO/: VAO.h
src/Game/Graphics/components/VBO/: VBO.h
src/Game/Graphics/components/camera/: Camera.cpp  Camera.h
src/Game/Graphics/modules/: GUIBaseClass.h
src/Game/Graphics_V2/: GraphicalEngine.cpp  GraphicalEngine.h
src/Game/NodeSystem/Nodes/: BaseNode.h  Node_Mesh.cpp  Node_Model3D.cpp  Node_Model3D.h
src/Game/Nodes/: GameObject.cpp  GameObject.h  Node.cpp  Node.h  NodeEmpty.cpp  NodeEmpty.h  NodeSprite.cpp  NodeSprite.h  NodeSystem.cpp  NodeSystem.h  Node_2.h
src/Game/graph/: GX.cpp  GX.h
src/Game/misc/: GameMisc.cpp  GameMisc.h  InternalLogger.cpp  InternalLogger.h
src/Graphics/: GE.cpp  GE.h  GE_close.cpp  GE_init.cpp  GE_rend.cpp  GraphicEngine.cpp  GraphicEngine.h  TextureManager.h
src/PluginManager/: PluginInterface.h  PluginManager.cpp  PluginManager.h
src/PluginManager/SamplePlugin/: CMakeLists.txt  PluginInterface.h  SamplePlugin.cpp  SamplePlugin.h
src/generators/: SplineGenerator3D.cpp  SplineGenerator3D.h
src/properties/: MessageBoard.cpp  MessageBoard.h  MessageBoardConversion.h  SafeConversion.cpp
